--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -246,7 +246,7 @@
     <section class="text-page">
       <!-- ===== HEADING ===== -->
 <div class="section-title">
-  <h2>Organizing Committee</h2>
+  <h2>Workshop Chair</h2>
 </div>
 
 <!-- ===== TEAM ===== -->
@@ -259,14 +259,7 @@
         <img src="images/KhubaibAmjad.jpeg">
       </div>
       <h3 class="name">Dr. Khubaib Amjad Alam</h3>
-      <h4 class="title">Associate Professor</h4>
-
-      <div class="roles">
-        <span class="role-badge">General Chair</span>
-        <span class="role-badge">TPC Chair</span>
-        <span class="role-badge">Proceedings Coordination</span>
-      </div>
-
+      <h4 class="title">Al-Ain University UAE</h4>
       <ul class="social">
         <li><a href="https://scholar.google.com/citations?user=s_BMc5YAAAAJ&hl=en"><i class="fa-solid fa-graduation-cap"></i></a></li>
         <li><a href="https://orcid.org/0000-0002-9476-2940"><i class="fa-brands fa-orcid"></i></a></li>
@@ -277,16 +270,39 @@
     <!-- 2 -->
     <div class="our-team">
       <div class="picture">
+        <img src="images/NadeemAbbas.jpeg">
+      </div>
+      <h3 class="name">Dr. Nadeem Abbas</h3>
+      <h4 class="title">Linnaeus University Sweden</h4>
+
+      <ul class="social">
+        <li><a href="https://scholar.google.com/citations?user=EHbIi1sAAAAJ&hl=en"><i class="fa-solid fa-graduation-cap"></i></a></li>
+        <li><a href="https://orcid.org/0000-0002-7555-7300"><i class="fa-brands fa-orcid"></i></a></li>
+        <li><a href="https://lnu.se/en/staff/nadeem.abbas/"><i class="fa-solid fa-building-columns"></i></a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+    </section>
+
+
+<section class="text-page">
+      <!-- ===== HEADING ===== -->
+<div class="section-title">
+  <h2>Publicity & Outreach</h2>
+</div>
+
+<!-- ===== TEAM ===== -->
+<div class="team-container">
+  <div class="row">
+
+    <!-- 1 -->
+    <div class="our-team">
+      <div class="picture">
         <img src="images/ImenBenzarti.jpeg">
       </div>
       <h3 class="name">Dr. Imen Benzarti</h3>
-      <h4 class="title">Associate Professor</h4>
-
-      <div class="roles">
-        <span class="role-badge">Publicity Chair</span>
-        <span class="role-badge">Volunteer Chair</span>
-        <span class="role-badge">Industry Partnerships</span>
-      </div>
+      <h4 class="title">ÉTS Montréal Canada</h4>
 
       <ul class="social">
         <li><a href="https://scholar.google.com/citations?user=i0lnR_IAAAAJ&hl=fr"><i class="fa-solid fa-graduation-cap"></i></a></li>
@@ -295,41 +311,46 @@
       </ul>
     </div>
 
-    <!-- 3 -->
+    <!-- 2 -->
     <div class="our-team">
       <div class="picture">
-        <img src="images/NadeemAbbas.jpeg">
+        <img src="images/Haroon_Mahmood.jpeg">
       </div>
-      <h3 class="name">Dr. Nadeem Abbas</h3>
-      <h4 class="title">Associate Professor</h4>
-
-      <div class="roles">
-        <span class="role-badge">Proceedings Chair</span>
-        <span class="role-badge">Workshops structure</span>
-        <span class="role-badge">PC & Outreach Management</span>
-      </div>
+      <h3 class="name">Dr. Haroon Mahmood</h3>
+      <h4 class="title">Al-Ain University UAE</h4>
 
       <ul class="social">
-        <li><a href="https://scholar.google.com/citations?user=EHbIi1sAAAAJ&hl=en"><i class="fa-solid fa-graduation-cap"></i></a></li>
-        <li><a href="https://orcid.org/0000-0002-7555-7300"><i class="fa-brands fa-orcid"></i></a></li>
-        <li><a href="https://lnu.se/en/staff/nadeem.abbas/"><i class="fa-solid fa-building-columns"></i></a></li>
+        <li><a href="https://scholar.google.com/citations?user=TJv3l2QAAAAJ&hl=en"><i class="fa-solid fa-graduation-cap"></i></a></li>
+        <li><a href="https://orcid.org/0000-0003-4675-1689"><i class="fa-brands fa-orcid"></i></a></li>
+        <li><a href="https://aau.ac.ae/en/staff/haroon-mahmood"><i class="fa-solid fa-building-columns"></i></a></li>
       </ul>
     </div>
 
-    <!-- 4 -->
+  </div>
+</div>
+</section>
+
+
+
+
+<section class="text-page">
+      <!-- ===== HEADING ===== -->
+<div class="section-title">
+  <h2>Web Chair</h2>
+</div>
+
+<!-- ===== TEAM ===== -->
+<div class="team-container">
+  <div class="row">
+
+    <!-- 1 -->
     <div class="our-team">
       <div class="picture">
         <img src="images/MuhammadHaroon.jpeg">
       </div>
       <h3 class="name">Muhammad Haroon</h3>
-      <h4 class="title">Senior Researcher</h4>
-
-      <div class="roles">
-        <span class="role-badge">Web Chair</span>
-        <span class="role-badge">Proceedings Co-Chair</span>
-        <span class="role-badge">Publicity Co-Chair</span>
-      </div>
-
+      <h4 class="title">Senior Researcher - AISEL</h4>
+      
       <ul class="social">
         <li><a href="https://scholar.google.com/citations?hl=en&user=j9QcX1YAAAAJ"><i class="fa-solid fa-graduation-cap"></i></a></li>
         <li><a href="https://orcid.org/my-orcid?orcid=0009-0000-4776-8090"><i class="fa-brands fa-orcid"></i></a></li>
@@ -338,27 +359,8 @@
 
   </div>
 </div>
+</section>
 
-    </section>
-
-
-
-    <section class="text-page">
-      <!-- ===== HEADING ===== -->
-<div class="section-title">
-  <h2>Program Committee</h2>
-</div>
-
-<!-- ===== TEAM ===== -->
-<div class="team-container">
-  <div class="row_p">
-    <div class="our-team_p">
-        Program Committee: To be announced (TBA)
-    </div>
-  </div>
-</div>
-
-    </section>
   </main>
 
   <!-- Footer is included here by JS - check scripts.js  -->
