--- a/Organizing_Committee.html
+++ b/Organizing_Committee.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IDEA-ARCH 2025</title>
+  <title>IDEA-ARCH 2026</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -354,6 +354,7 @@
       <ul class="social">
         <li><a href="https://scholar.google.com/citations?hl=en&user=j9QcX1YAAAAJ"><i class="fa-solid fa-graduation-cap"></i></a></li>
         <li><a href="https://orcid.org/my-orcid?orcid=0009-0000-4776-8090"><i class="fa-brands fa-orcid"></i></a></li>
+        <li><a href="www.linkedin.com/in/muhammad-haroon-47333627a"><i class="fa-brands fa-linkedin"></i></a></li>
       </ul>
     </div>
 
