--- a/Contact.html
+++ b/Contact.html
@@ -342,7 +342,7 @@
         <img src="images/KhubaibAmjad.jpeg">
       </div>
       <h3 class="name">Dr. Khubaib Amjad Alam</h3>
-      <h4 class="title">Associate Professor</h4>
+      <h4 class="title">Al-Ain University UAE</h4>
       <ul class="social">
         <li><a href="https://aau.ac.ae/en/staff/khubaib-Alam"><i class="fa-solid fa-building-columns"></i></a></li>
         <li><a href="mailto:khubaib.alam@aau.ac.ae "><i class="fa-solid fa-envelope"></i></a></li>
@@ -355,7 +355,7 @@
         <img src="images/MuhammadHaroon.jpeg">
       </div>
       <h3 class="name">Muhammad Haroon</h3>
-      <h4 class="title">Senior Researcher</h4>
+      <h4 class="title">Senior Researcher - AISEL</h4>
       <ul class="social">
         <li><a href="mailto:i229812@nu.edu.pk "><i class="fa-solid fa-envelope"></i></a></li>
       </ul>
