--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IDEA-ARCH 2026</title>
+  <title>IDEA-ARCH 2025</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -189,6 +189,7 @@
   color:#ffd700;
 }
 
+
 /* ===== WORKSHOP CONTACT BOX ===== */
 .workshop-contact{
   max-width:700px;
@@ -316,6 +317,68 @@
   padding-bottom: 20px; /* 👈 pushes footer down */
 }
 
+/* ===== LOCATION SECTION ===== */
+.event-location{
+  max-width:700px;
+  margin:60px auto 80px;
+  padding:40px 30px;
+  background:#ffffff;
+  border-radius:16px;
+  text-align:center;
+  box-shadow:0 20px 50px rgba(0,0,0,0.12);
+  position:relative;
+  overflow:hidden;
+}
+
+/* Soft glowing background animation */
+.event-location::before{
+  content:"";
+  position:absolute;
+  width:300px;
+  height:300px;
+  background:radial-gradient(circle, rgba(10,79,163,0.15), transparent 70%);
+  top:-80px;
+  left:-80px;
+  animation:floatGlow 6s ease-in-out infinite;
+}
+
+@keyframes floatGlow{
+  0%{ transform:translateY(0); }
+  50%{ transform:translateY(15px); }
+  100%{ transform:translateY(0); }
+}
+
+.location-icon{
+  font-size:38px;
+  color:#e63946;
+  margin-bottom:15px;
+  animation:bouncePin 2s infinite;
+}
+
+@keyframes bouncePin{
+  0%,100%{ transform:translateY(0); }
+  50%{ transform:translateY(-6px); }
+}
+
+.location-title{
+  font-size:20px;
+  font-weight:700;
+  color:#0a4fa3;
+  margin-bottom:12px;
+}
+
+.location-text{
+  font-size:16px;
+  line-height:1.8;
+  color:#444;
+}
+
+.event-location:hover{
+  transform:translateY(-5px);
+  transition:0.4s ease;
+}
+
+
 </style>
 
 </head>
@@ -342,7 +405,7 @@
         <img src="images/KhubaibAmjad.jpeg">
       </div>
       <h3 class="name">Dr. Khubaib Amjad Alam</h3>
-      <h4 class="title">Al-Ain University UAE</h4>
+      <h4 class="title">Associate Professor</h4>
       <ul class="social">
         <li><a href="https://aau.ac.ae/en/staff/khubaib-Alam"><i class="fa-solid fa-building-columns"></i></a></li>
         <li><a href="mailto:khubaib.alam@aau.ac.ae "><i class="fa-solid fa-envelope"></i></a></li>
@@ -355,14 +418,14 @@
         <img src="images/MuhammadHaroon.jpeg">
       </div>
       <h3 class="name">Muhammad Haroon</h3>
-      <h4 class="title">Senior Researcher - AISEL</h4>
+      <h4 class="title">Senior Researcher</h4>
       <ul class="social">
         <li><a href="mailto:i229812@nu.edu.pk "><i class="fa-solid fa-envelope"></i></a></li>
       </ul>
       </ul>
     </div>
 
-   <!-- ===== WORKSHOP CONTACT ===== -->
+<!-- ===== WORKSHOP CONTACT ===== -->
 <div class="workshop-contact fade-in">
   <p class="workshop-text">
     <i class="fa-solid fa-envelope-open-text"></i>
@@ -376,6 +439,24 @@
     </a>
   </p>
 </div>
+
+<!-- ===== LOCATION SECTION ===== -->
+<div class="event-location fade-in">
+  <div class="location-icon">
+    <i class="fa-solid fa-location-dot"></i>
+  </div>
+
+  <h3 class="location-title">
+    Intelligent & Data-Driven Engineering for Software Architecture (IDEA-ARCH 2026) Workshop
+    co-located with the International Conference on Software Architecture (ECSA 2026)
+  </h3>
+
+  <p class="location-text">
+    Held in <strong>Bolzano</strong><br>
+    Italy 🇮🇹
+  </p>
+</div>
+
 
 
     </section>
