--- a/Call_For_Paper.html
+++ b/Call_For_Paper.html
@@ -273,17 +273,19 @@ main {
 
       </p>
       <ul class="cfp-list">
-        <li>NLP-based analysis of architectural descriptions.</li>
-        <li>Architectural decision-making under uncertainty.</li>
-        <li>Recommendation of architectural tactics and patterns.</li>
+        <li>NLP-based analysis of architectural descriptions</li>
+        <li>Mining Software Repositories (MSR) for Software Architecture</li>
+        <li>Architectural evaluation patterns mining</li>
+        <li>Artifical Intelligence advances (LLMs/Gen-AI) and their implications for Software Architecture</li>
+        <li>Recommendation Systems of architectural tactics and patterns</li>
         <li>MSR for architectural knowledge and evolution patterns</li>
-        <li>Automated detection of architecture smells and Technical Debt.</li>
-        <li>Automated extraction and classification of architectural knowledge.</li>
-        <li>Empirical validation strategies for intelligent architectural methods.</li>
-        <li>Mining architectural concerns and design rationales from repositories.</li>
-        <li>Trust calibration and interpretability of architectural recommendations.</li>
-        <li>Computational intelligence techniques for architectural trade-off analysis.</li>
-        <li>Explainability and transparency of intelligent architectural analysis tools.</li>
+        <li>Automated detection of architecture smells and Technical Debt</li>
+        <li>Automated recovery and tracking of architectural decisions overtime</li>
+        <li>Automated extraction and classification of architectural concerns & knowledge</li>
+        <li>Automated, semi-automated tool support for Architectural analysis & knowledge Management</li>
+        <li>Empirical validation strategies for intelligent architectural methods</li>
+        <li>Computational intelligence techniques for architectural trade-off analysis</li>
+        <li>Explainability and transparency of intelligent architectural analysis tools</li>
       </ul>
 
       <h3 class="cfp-subtitle">Paper Categories</h3>
@@ -313,9 +315,18 @@ main {
           <i class="fa-solid fa-file-lines"></i> LNCS Format
         </a>
 
+          <!-- DOWNLOAD CFP -->
+  <a href="CFP/CallForPaper.jpeg"
+     class="cfp-btn secondary"
+     download>
+    <i class="fa-solid fa-download"></i> Download CFP
+  </a>
+
         <a href="#" class="cfp-btn primary">
           <i class="fa-solid fa-paper-plane"></i> Submit Paper
         </a>
+
+
       </div>
 
     </div>
