--- a/Call_For_Paper.html
+++ b/Call_For_Paper.html
@@ -322,7 +322,7 @@ main {
     <i class="fa-solid fa-download"></i> Download CFP
   </a>
 
-        <a href="#" class="cfp-btn primary">
+        <a href="https://easychair.org/account2/signin?l=5157538519024388947" class="cfp-btn primary">
           <i class="fa-solid fa-paper-plane"></i> Submit Paper
         </a>
 
